@@ -9,4 +9,4 @@
 set -e # Exit on failure
 
 # The option is needed for Java 17+ to allow native memory access operations.
-SBT_OPTS="--enable-native-access=ALL-UNNAMED" sbt assembly
+SBT_OPTS="--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow" sbt -error assembly
